For the latest news, visit the SparForte web site.

CHANGES SINCE 2.2

1. Fix: The PWD variable value is always revised when SparForte (or, at least, the scanner) starts.  This prevents an exported PWD variable from another shell confusion SparForte.

2. Fix: The job control messages now only display in interactive or breakout sessions (unless hidden for another reason).

3. Fix: The strings.csv_field function is more in line with RFC 4180.  CR+LF line ending no longer returned on the last field.  Single quotes flag.

4. Fix: using equals for assignment gives an error message to use := instead.

5. Fix: get_line no longer reports an end-of-file when reading the last line of a file that doesn't have a newline.

6. Fix: --break now shows the line where the execution stopped, although the file name and line number is wrong in some cases.

7. Change: test phase mode (--test) replaces development phase mode as the default.  Use development phase mode (--coding) to change to development phase.
