@@ -11,11 +11,11 @@ These are new issues identified but not entered into the outstanding bug list
 Priority Issues (Fix These First)
 -------------------------------
 
+* enum items override existing identifiers but shouldn't.  when they do
+  override a pre-existing procedure, a "shell word expected" error occurs.
 * improve first word parsing on the command
     - pwd\ ; runs but should not: trailing spaces of the word are being stripped
 * waitToReveal sometimes throws an unexpected exception
-*--break may be broken (request by CY)
-   - line numbers / file names are wrong
 - raise in one of my exception handlers in SSDS did not function properly...
   investigate what happened.
 - the new type qualifiers system and renaming
@@ -41,6 +41,10 @@ Priority Issues (Fix These First)
 - static expressions
 - csv support
      - csv_replace - single quote, cr+lf ending
+* if the system shutdown, BDB locks are left in place
+  - these need to be recovered using txn_recover and txn_abort, possibly
+    whenever a BDB file is opened.  See
+    https://apps.state.or.us/tech/berkeleyDB/api_c/txn_recover.html
 - unsorted/misc
     - do exceptions set an error code, even if handled?  if so, handling
       them should clear the error code. (request by CY)
